openshift-templates-springboot/istio-networking/destination-rule-recommendation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
