openshift-templates-springboot/istio-networking/virtual-service-customer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
    - "*"
  gateways:
    - customer
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: customer # OpenShfit service, FQDN: customer.<namespace>.svc.cluster.local
            port:
              number: 8080
